ags (0.7.61)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed build system

ags (0.7.60)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed spelling error unknow to unknown
	* fixed underscore to score of installation directories
	* modified libgsequencer to be private

ags (0.7.59)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed package name in .pc files

ags (0.7.58)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* split API reference

ags (0.7.57)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* relicensed docs to be GFDL+3 without invariant sections

ags (0.7.56)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed Makefile.am to install libags-1.0.pc
	* improved developer manual
	* improved set AgsApplicationContext's instance in gsequencer_main.c
	* implemented timestamp property of AgsAutomation
	* implemented ags_thread_add_start_queue() and ags_thread_add_start_queue_all()

ags (0.7.55)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed crash on missing poll descriptor
	* fixed first connect and then reset AgsPreferences in order to get valid configuration
	* improved error setting and handling in ags_devout_alsa_init() handling now wrong configuration
	* disabled Lv2 context menu of AgsMachine
	* added libags.pc.in file

ags (0.7.54)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing addition of overclock value of soundcard in ags_simple_file.c
	* fixed wrong sequencer duration calculated by wrong delay now it gets it of AgsSoundcard
	* fixed use of uninitialized value in ags_cell_pattern.c and ags_pattern_box.c
	* fixed persist virtual audio and midi mapping
	* fixed reset buffer-size and samplerate of AgsAudio as setting AgsSoundcard
	* fixed default frequency of AgsAudioThread and AgsChannelThread
	* implemented character ring-buffer in ags_devout.c
	* implemented to interrupt AgsLv2Worker thread