@@ -9,5 +9,5 @@ Description: Advanced Gtk+ Sequencer audio processing engine
 URL: http://nongnu.org/gsequencer
 Version: @PACKAGE_VERSION@
 Requires: uuid >= 1.0.2 libxml-2.0 >= 2.8.0 gobject-2.0 >= 2.32.3 glib-2.0 >= 2.32.3 gmodule-2.0 >= 2.32.3 gthread-2.0 >= 2.32.3 gio-2.0 >= 2.32.3
-Libs: -L${libdir} -lags-1.0 -lags_thread-1.0 -lags_server-0.7 -lags_audio-1.0 -lags_gui-0.7 -lgsequencer-0.7
+Libs: -L${libdir} -lags -lags_thread -lags_server
 Cflags: -I${includedir}
