@@ -8,6 +8,6 @@ Name: libags-audio
 Description: Advanced Gtk+ Sequencer audio processing engine
 URL: http://nongnu.org/gsequencer
 Version: @PACKAGE_VERSION@
-Requires: uuid >= 1.0.2 alsa >= 1.0.25 jack libxml-2.0 >= 2.8.0 sndfile >= 1.0.25 libinstpatch-1.0 >= 1.0 gobject-2.0 >= 2.32.3 glib-2.0 >= 2.32.3 gmodule-2.0 >= 2.32.3 gthread-2.0 >= 2.32.3 gio-2.0 >= 2.32.3
-Libs: -L${libdir} -lags-1.0 -lags_thread-1.0 -lags_server-0.7 -lags_audio-1.0
+Requires: uuid >= 1.0.2 alsa >= 1.0.25 jack libxml-2.0 >= 2.8.0 sndfile >= 1.0.25 libinstpatch-1.0 >= 1.0 gobject-2.0 >= 2.32.3 glib-2.0 >= 2.32.3 gmodule-2.0 >= 2.32.3 gthread-2.0 >= 2.32.3 gio-2.0 >= 2.32.3 libags >= 0.7.62
+Libs: -L${libdir} -lags_audio
 Cflags: -I${includedir}
